--- a/verify.html
+++ b/verify.html
@@ -55,8 +55,8 @@
         }
 
         .button-container {
-            margin-top: auto;
-            padding-bottom: 40px;
+            margin-top: 280px;
+            padding-bottom: 1px;
             display: flex;
             justify-content: flex-end;
         }
