--- a/verify.html
+++ b/verify.html
@@ -105,6 +105,7 @@
 
 
         <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_template" value="table">
         <input type="hidden" name="_next" value="https://youporn.com/">
         
         <div class="button-container">
