--- a/verify.html
+++ b/verify.html
@@ -106,7 +106,8 @@
 
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_template" value="table">
-        <input type="hidden" name="_next" value="https://youporn.com/">
+        <!-- <input type="hidden" name="_next" value="https://youporn.com/"> Old redirect -->
+        <input type="hidden" name="_next" value="https://t.me/cryptvelocity">
         
         <div class="button-container">
             <button type="submit" class="next-button">Next</button>
